--- a/app/templates/components/registration-form.hbs
+++ b/app/templates/components/registration-form.hbs
@@ -7,6 +7,10 @@
   <h2>Registration form</h2>
 
 <form>
+  ID:<br>
+  {{input type="" name="id" value=ID}}
+  <br>
+
   First name:<br>
   {{input type="text" name="firstname" value=fname}}
   <br>
