--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,3 @@
-{{!-- The following component displays Ember's default welcome message. --}}
+{{top-nav-bar}}
 
-{{!-- Feel free to remove this! --}}{{outlet}}
+{{outlet}}
