--- a/app/templates/components/person-information.hbs
+++ b/app/templates/components/person-information.hbs
@@ -1,1 +1,48 @@
-{{yield}}
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+<h2>INFORMATION booth</h2>
+<div>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+            <th>Email</th>
+            <th>Action</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Maria </td>
+            <td> Anders</td>
+            <td>40</td>
+            <td>anders@gmail.com</td>
+            <td>SE</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Francisco </td>
+            <td>chang</td>
+            <td>35</td>
+            <td>chang@gmail.com</td>
+            <td>ME</td>
+        </tr>
+        
+       
+    </table>
+</div>
