--- a/app/templates/components/registration-form.hbs
+++ b/app/templates/components/registration-form.hbs
@@ -1,3 +1,58 @@
+<style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  * {
+    box-sizing: border-box
+  }
+/* Full-width input fields */
+  input[type=text],
+  input[type=password] {
+    width: 50%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+
+  input[type=text]:focus,
+  input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+
+  hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+  }
+/* Set a style for all buttons */
+  button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 50%;
+    opacity: 0.9;
+  }
+
+  button:hover {
+    opacity: 1.2;
+  }
+/* Add padding to container elements */
+  .container {
+    padding: 14px;
+  }
+  /* Clear floats */
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+</style>
 <div class="jumbo">
   <div class="right tomster"></div>
   <h2>Welcome to Ember Data Rnd</h2>
@@ -6,23 +61,24 @@
   </p>
   <h2>Registration form</h2>
 
-<form>
-  ID:<br>
-  {{input type="" name="id" value=ID}}
-  <br>
 
-  First name:<br>
-  {{input type="text" name="firstname" value=fname}}
-  <br>
-  Last name:<br>
-  {{input type="text" name="lastname" value=lname}}
-  <br>
-  Age:<br>
-  {{input type="number" name="age" value=age}}
-  <br>
-  EMail:<br>{{input type="email" name="email" value=email}}
-</form>
+  <form>
+    ID:<br>
+    {{input type="" name="id" value=ID}}
+    <br>
 
- <button type="button"{{action "save"}}>Click Me!</button> 
- <div class="button"  {{action "save"}}>Save</div> 
+    First name:<br>
+    {{input type="text" name="firstname" value=fname}}
+    <br>
+    Last name:<br>
+    {{input type="text" name="lastname" value=lname}}
+    <br>
+    Age:<br>
+    {{input type="number" name="age" value=age}}
+    <br>
+    EMail:<br>{{input type="email" name="email" value=email}}
+  </form>
+
+  <button type="button" {{action "save"}}> SAVE </button>
+
 </div>
