--- a/app/templates/components/registration-form.hbs
+++ b/app/templates/components/registration-form.hbs
@@ -59,7 +59,7 @@
   <p>
     a step towards Ember Data research and development
   </p>
-  <h2>Registration form</h2>
+  <h2>Required information:</h2>
 
 
   <form>
