--- a/app/templates/components/top-nav-bar.hbs
+++ b/app/templates/components/top-nav-bar.hbs
@@ -30,9 +30,9 @@ body {
 </style>
 <div class="topnav">
     {{#link-to "reg-form" class="menu-about"}}
-    FORM
+    REGISTRATION FORM
     {{/link-to}}
     {{#link-to "person-info" class="menu-contact"}}
-    INFO
+    INFORMATION
     {{/link-to}}
 </div>
