--- a/app/templates/components/registration-form.hbs
+++ b/app/templates/components/registration-form.hbs
@@ -64,7 +64,7 @@
 
   <form>
     ID:<br>
-    {{input type="" name="id" value=ID}}
+    {{input type="" name="id" value=pid}}
     <br>
 
     First name:<br>
