--- a/app/templates/components/person-information.hbs
+++ b/app/templates/components/person-information.hbs
@@ -31,7 +31,7 @@ tr:nth-child(even) {
 
         {{#each data as |info|}}
         <tr>
-            <th>{{info.pid}}</th>
+            <th>{{info.id}}</th>
             <th>{{info.fname}}</th>
             <th>{{info.lname}}</th>
             <th>{{info.age}}</th>
