--- a/app/templates/components/registration-form.hbs
+++ b/app/templates/components/registration-form.hbs
@@ -64,7 +64,7 @@
 
   <form>
     ID:<br>
-    {{input type="" name="id" value=id}}
+    {{input type="number" name="id" value=id}}
     <br>
 
     First name:<br>
